Code restructured. Test pass except full game score (strikes in last frame)